--- a/chat.html
+++ b/chat.html
@@ -296,7 +296,7 @@
             
             // Send message to backend
             try {
-                const response = await fetch('https://chatbot-71v4.onrender.com/chat', {
+                const response = await fetch('https://chatbot-71v4.onrender.com', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
