--- a/chat.html
+++ b/chat.html
@@ -162,6 +162,9 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
+    
     <script>
         // Identificar parâmetros de URL 
         const params = new URLSearchParams(window.location.search);
