correct HTTPS request

--- a/loading.html
+++ b/loading.html
@@ -119,7 +119,7 @@
                 clearInterval(loadingInterval);
                 // Redirect to chat page after a small delay
                 setTimeout(() => {
-                    window.location.href = `eumeremexomuito.netlify.app/chat.html?plushie=${plushieName}`;
+                    window.location.href = `https://eumeremexomuito.netlify.app/chat.html?plushie=${plushieName}`;
                 }, 1000);
             }
         }, interval);
